<resources>
    <string name="app_name">SynDroid</string>
    <string name="app_claim">synchronize everything</string>
    <string name="connect_activity_btn_connect_img">Scan and connect button</string>
    <string name="connect_activity_scan_btn">Scan and connect</string>
    <string name="connect_activity_manual_btn">Add manually</string>
    <string name="favourites_fragment_placeholder_text">No servers added</string>
    <string name="favourites_fragment_edit_dialog_title">Edit </string>
    <string name="dialog_confirm_ok_button">Ok</string>
    <string name="dialog_confirm_confirm_button">Confirm</string>
    <string name="dialog_confirm_dismiss_button">Dismiss</string>
    <string name="dialog_confirm_title">Are your sure?</string>
    <string name="dialog_confirm_delete_resource_message">Are you sure you want to delete </string>
    <string name="dialog_edit_server_ip_field">Server Ip</string>
    <string name="dialog_edit_server_name_field">Server name</string>
    <string name="dialog_edit_server_name_error">Please enter server name!</string>
    <string name="dialog_edit_server_ip_error">Please enter server ip!</string>
    <string name="dialog_edit_server_update_success">Server updated successfully!</string>
    <string name="scanner_activity_subtitle">Open your desktop client and scan the code you see.\nServer will be automatically added to favourites</string>
    <string name="scanner_activity_title">Scan to connect</string>
    <string name="dashboard_toolbar_menu_keyboard_item">Keyboard</string>
    <string name="dashboard_toolbar_menu_left_click_item">Left Click</string>
    <string name="dashboard_toolbar_menu_right_click_item">Right Click</string>
    <string name="dashboard_app_drawer_title_2">Client</string>
    <string name="dashboard_app_drawer_instructions">Long press and drag to order items. First five will be displayed in bottom navigation.</string>
    <string name="fragment_mouse_manual_1">Use your finger to control the mouse</string>
    <string name="fragment_mouse_manual_2">Tap to do left click</string>
    <string name="fragment_mouse_manual_3">Tree finger tap to do right click</string>
    <string name="fragment_mouse_manual_4">Use two fingers to scroll</string>
    <string name="fragment_mouse_manual_5">Tap and hold to click \'n\' drag</string>
    <string name="fragment_media_unmute">Unmute Volume</string>
    <string name="fragment_media_mute">Mute Volume</string>
    <string name="fragment_media_instruction_1">You can change or mute volume</string>
    <string name="fragment_media_instruction_2">Use control buttons to control general media</string>
    <string name="keyboard_button_control">Control</string>
    <string name="keyboard_button_shift">Shift</string>
    <string name="keyboard_button_alt">Alt</string>
    <string name="keyboard_button_super">Super</string>
    <string name="keyboard_button_tab">Tab</string>
    <string name="keyboard_button_enter">Enter</string>
    <string name="keyboard_button_escape">Esc</string>
    <string name="keyboard_button_delete">Delete</string>
    <string name="keyboard_button_home">Home</string>
    <string name="keyboard_button_end">End</string>
    <string name="keyboard_button_page_up">Page Up</string>
    <string name="keyboard_button_page_down">Page Down</string>
    <string name="keyboard_fragment_instruction_1">Tap a button once to send key</string>
    <string name="keyboard_fragment_instruction_2">Long press to emmulate key press</string>
    <string name="keyboard_fragment_instruction_3">Key presses will be sent as modifiers along with every keyboard input</string>
    <string name="fragment_state_instruction_1">You can control the state of your pc from here</string>
    <string name="fragment_state_instruction_2">Note that actions taken here will disconnect you from server</string>
    <string name="fragment_state_button_shutdown">Shutdown</string>
    <string name="fragment_state_button_sleep">Sleep</string>
    <string name="fragment_state_button_reboot">Reboot</string>
    <string name="fragment_state_button_log_off">Log Off</string>
</resources>
