<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    >
    
    <LinearLayout
        android:id="@+id/tutorial_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp"
        android:background="?attr/primary_light"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/keyboard_fragment_instruction_1"
            android:textColor="?attr/icons"
            android:fontFamily="@font/roboto_light"
            android:textSize="14sp"
            android:textAlignment="center"
            />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/keyboard_fragment_instruction_2"
            android:textColor="?attr/icons"
            android:fontFamily="@font/roboto_light"
            android:textSize="14sp"
            android:textAlignment="center"
            />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyboard_fragment_instruction_3"
            android:textColor="?attr/icons"
            android:fontFamily="@font/roboto_light"
            android:textSize="14sp"
            android:textAlignment="center"
            />
    
    </LinearLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorial_container"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        
        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/modifier_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                >
                
                <com.aleksa.syndroid.fragments.keyboard.buttons.ControlButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    app:text="@string/keyboard_button_control" />
                
                <com.aleksa.syndroid.fragments.keyboard.buttons.ShiftButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    app:text="@string/keyboard_button_shift" />
                
                <com.aleksa.syndroid.fragments.keyboard.buttons.AltButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    app:text="@string/keyboard_button_alt" />
                
                <com.aleksa.syndroid.fragments.keyboard.buttons.SuperButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:text="@string/keyboard_button_super" />
            
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp">
                
                <com.aleksa.syndroid.fragments.keyboard.buttons.TabButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    app:text="@string/keyboard_button_tab" />
                
                <com.aleksa.syndroid.fragments.keyboard.buttons.EnterButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:text="@string/keyboard_button_enter" />
            
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp">
                
                <com.aleksa.syndroid.fragments.keyboard.buttons.EscapeButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    app:text="@string/keyboard_button_escape" />
                
                <com.aleksa.syndroid.fragments.keyboard.buttons.DeleteButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    app:text="@string/keyboard_button_delete" />
                
                <com.aleksa.syndroid.fragments.keyboard.buttons.HomeButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    app:text="@string/keyboard_button_home" />
                
                <com.aleksa.syndroid.fragments.keyboard.buttons.EndButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:text="@string/keyboard_button_end" />
            
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                >
                
                <com.aleksa.syndroid.fragments.keyboard.buttons.PageUpButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    app:text="@string/keyboard_button_page_up" />
                
                <com.aleksa.syndroid.fragments.keyboard.buttons.PageDownButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:text="@string/keyboard_button_page_down" />
            
            </LinearLayout>
        </LinearLayout>
    
    </ScrollView>

</android.support.constraint.ConstraintLayout>
