<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.aleksa.syndroid.fragments.mouse.mouse_pad.MousePad
        android:id="@+id/mouse_pad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:textColor="?attr/primary_text"
        android:textSize="22sp"
        android:fontFamily="@font/roboto_thin"
        />
    
    <LinearLayout
        android:clickable="false"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:textSize="14sp"
            android:textColor="?attr/primary_text"
            android:text="@string/fragment_mouse_manual_1"
            />
    
        <TextView
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:textColor="?attr/primary_text"
            android:textSize="14sp"
            android:text="@string/fragment_mouse_manual_2"
            />
    
        <TextView
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:textColor="?attr/primary_text"
            android:textSize="14sp"
            android:text="@string/fragment_mouse_manual_3"
            />
    
        <TextView
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:textColor="?attr/primary_text"
            android:textSize="14sp"
            android:text="@string/fragment_mouse_manual_4"
            />
    
        <TextView
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:textColor="?attr/primary_text"
            android:textSize="14sp"
            android:text="@string/fragment_mouse_manual_5"
            />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="32dp"
        >
        
        <ImageView
            android:id="@+id/mouse_left_click"
            android:layout_gravity="center"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:background="?attr/primary_light"
            tools:ignore="ContentDescription" />
    
        <ImageView
            android:id="@+id/mouse_right_click"
            android:layout_gravity="center"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:background="?attr/primary_light"
            tools:ignore="ContentDescription" />
        
    </LinearLayout>
    
</FrameLayout>
