<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".activities.scanner.ScannerActivity">
    
    <com.budiyev.android.codescanner.CodeScannerView
        android:layout_centerInParent="true"
        android:id="@+id/scanner_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:autoFocusButtonColor="?attr/icons"
        app:autoFocusButtonVisible="false"
        app:flashButtonColor="?attr/icons"
        app:flashButtonVisible="false"
        app:frameColor="?attr/icons"
        app:frameCornersSize="60dp"
        app:frameAspectRatioWidth="1"
        app:frameAspectRatioHeight="1"
        app:frameSize="0.55"
        app:frameThickness="2dp"
        app:maskColor="#00FFFFFF"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:background="?attr/primary_dark"
        android:layout_centerHorizontal="true">

        <!--Title-->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanner_activity_title"
            android:textColor="?attr/icons"
            android:textSize="25sp"
            android:fontFamily="@font/roboto_light"
            android:layout_gravity="center"
            />

        </FrameLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="?attr/primary"
        android:padding="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/subtitle"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="?attr/icons"
            android:textSize="12sp"
            android:fontFamily="@font/roboto"
            android:textAlignment="center"
            android:text="@string/scanner_activity_subtitle"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle"
            android:text="@string/connect_activity_manual_btn"
            android:fontFamily="@font/roboto_bold"
            android:textSize="18sp"
            android:textColor="?attr/icons"
            android:onClick="onAddManuallyClick"
            />

    </android.support.constraint.ConstraintLayout>


    
</RelativeLayout>
