<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_image"
    tools:context=".activities.ConnectActivity"
    tools:layout_editor_absoluteY="25dp">
    
    <!--App Title-->
    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/app_name_spaced"
        android:textAllCaps="false"
        android:textColor="?attr/accent"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <!--App Subtitle-->
    <TextView
        android:id="@+id/app_claim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/app_claim"
        android:textColor="?attr/secondary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />
    
    <!--Connect Button-->
    <FrameLayout
        android:id="@+id/btn_connect_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:onClick="scanQrCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_claim"
        app:layout_constraintBottom_toBottomOf="parent">
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:contentDescription="@string/connect_activity_btn_connect_img"
            android:src="?attr/connect_btn" />
    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/connect_activity_scan_btn"
            android:textColor="?attr/secondary_text"
            android:textSize="18sp" />

    </FrameLayout>
    
    <android.support.v7.widget.RecyclerView
        android:id="@+id/favourites_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_connect_container" />

</android.support.constraint.ConstraintLayout>
